hphp/test/slow/return_statement/implicit-return-typecheck.php.expectf

Catchable fatal error: Value returned from function foo() must be of type int, null given in %s on line 2
